--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@raisins/core",
-  "author": "Logan Volkers",
+  "author": "SaaSquatch",
   "version": "0.27.0",
   "license": "MIT",
   "main": "dist/index.js",
