--- a/packages/react/package.json
+++ b/packages/react/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@raisins/react",
-  "author": "Logan Volkers",
+  "author": "SaaSquatch",
   "version": "0.82.0",
   "license": "MIT",
   "main": "dist/index.js",
@@ -73,8 +73,7 @@
     "prosemirror-view": "^1.20.2",
     "snabbdom": "^3.1.0",
     "style-to-object": "^0.3.0",
-    "throttle-debounce": "^5.0.0",
-    "valtio": "^1.5.2"
+    "throttle-debounce": "^5.0.0"
   },
   "devDependencies": {
     "@babel/core": "^7.15.5",
