--- a/packages/stencil-docs-target/package.json
+++ b/packages/stencil-docs-target/package.json
@@ -1,9 +1,9 @@
 {
   "name": "@raisins/stencil-docs-target",
   "description": "A custom docs target for Stencil components. Edit in Raisins.",
-  "version": "0.2.10",
+  "version": "1.0.0",
   "license": "MIT",
-  "author": "Logan Volkers",
+  "author": "SaaSquatch",
   "module": "dist/stencil-docs-target.esm.js",
   "main": "dist/index.js",
   "typings": "dist/index.d.ts",
@@ -61,13 +61,10 @@
     "size-limit": "^5.0.4",
     "tsdx": "^0.14.1",
     "tslib": "^2.3.1",
-    "typescript": "^3.9.10"
+    "typescript": "^4.7.2"
   },
   "dependencies": {
-    "@raisins/schema": "^0.7.0",
-    "i": "^0.3.7",
-    "npm": "^8.8.0",
-    "split-on-first": "^3.0.0"
+    "@raisins/schema": "^0.7.0"
   },
   "gitHead": "8629058a0437bbea5bfb184c13855f4b58a8480f"
 }
