--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "private": true,
   "scripts": {
     "bootstrap": "lerna bootstrap",
-    "build": "turbo run build",
+    "build": "npm i && turbo run build",
     "storybook": "turbo run storybook",
     "test": "turbo run test"
   },
