--- a/packages/react/package.json
+++ b/packages/react/package.json
@@ -87,7 +87,7 @@
     "@storybook/react": "^6.4.22",
     "@testing-library/react-hooks": "^7.0.2",
     "@types/css-tree": "^1.0.6",
-    "@types/jest": "^27.0.2",
+    "@types/jest": "^29.1.0",
     "@types/prosemirror-commands": "^1.0.4",
     "@types/prosemirror-keymap": "^1.0.4",
     "@types/prosemirror-schema-basic": "^1.0.2",
@@ -100,15 +100,17 @@
     "@types/throttle-debounce": "^5.0.0",
     "babel-loader": "^8.2.2",
     "custom-elements-manifest": "^1.0.0",
-    "cypress": "^9.5.3",
+    "cypress": "^12.12.0",
     "dts-cli": "^1.5.1",
     "husky": "^7.0.2",
+    "jest-environment-jsdom": "^29.1.0",
     "local-cypress": "^1.2.5",
     "react": "*",
     "react-dom": "^16.14.0",
     "react-hooks-testing-library": "^0.6.0",
     "react-is": "^17.0.2",
     "size-limit": "^5.0.4",
+    "ts-jest": "^29.1.0",
     "tslib": "^2.3.1",
     "typescript": "^4.4.3"
   },
