--- a/packages/react/package.json
+++ b/packages/react/package.json
@@ -2,7 +2,7 @@
   "name": "@raisins/react",
   "author": "ReferralSaaSquatch.com, Inc.",
   "description": "React package with tools for building a Raisins editor",
-  "version": "1.1.1",
+  "version": "1.1.2",
   "license": "MIT",
   "main": "dist/index.js",
   "module": "dist/react.esm.js",
@@ -30,7 +30,7 @@
     "lint": "dts lint",
     "size": "size-limit",
     "analyze": "size-limit --why",
-    "storybook": "start-storybook -p 6006",
+    "storybook": "start-storybook -p 6007",
     "build-storybook": "build-storybook"
   },
   "peerDependencies": {
@@ -72,7 +72,7 @@
     "prosemirror-schema-basic": "^1.1.2",
     "prosemirror-state": "^1.3.4",
     "prosemirror-view": "^1.20.2",
-    "snabbdom": "^3.1.0",
+    "snabbdom": "^3.5.1",
     "style-to-object": "^0.3.0",
     "throttle-debounce": "^5.0.0",
     "valtio": "^1.5.2",
@@ -87,7 +87,7 @@
     "@storybook/react": "^6.4.22",
     "@testing-library/react-hooks": "^7.0.2",
     "@types/css-tree": "^1.0.6",
-    "@types/jest": "^27.0.2",
+    "@types/jest": "^29.1.0",
     "@types/prosemirror-commands": "^1.0.4",
     "@types/prosemirror-keymap": "^1.0.4",
     "@types/prosemirror-schema-basic": "^1.0.2",
@@ -100,15 +100,17 @@
     "@types/throttle-debounce": "^5.0.0",
     "babel-loader": "^8.2.2",
     "custom-elements-manifest": "^1.0.0",
-    "cypress": "^9.5.3",
+    "cypress": "^12.12.0",
     "dts-cli": "^1.5.1",
     "husky": "^7.0.2",
+    "jest-environment-jsdom": "^29.1.0",
     "local-cypress": "^1.2.5",
     "react": "*",
     "react-dom": "^16.14.0",
     "react-hooks-testing-library": "^0.6.0",
     "react-is": "^17.0.2",
     "size-limit": "^5.0.4",
+    "ts-jest": "^29.1.0",
     "tslib": "^2.3.1",
     "typescript": "^4.4.3"
   },
