--- a/packages/react/package.json
+++ b/packages/react/package.json
@@ -2,7 +2,7 @@
   "name": "@raisins/react",
   "author": "ReferralSaaSquatch.com, Inc.",
   "description": "React package with tools for building a Raisins editor",
-  "version": "1.1.4-0",
+  "version": "1.1.4-2",
   "license": "MIT",
   "main": "dist/index.js",
   "module": "dist/react.esm.js",
@@ -60,10 +60,10 @@
   "dependencies": {
     "@raisins/core": "^1.1.1",
     "@raisins/schema": "^1.0.0",
+    "bunshi": "^2.0.2",
     "css-tree": "^1.1.3",
     "hotkeys-js": "^3.8.7",
     "jotai": "^1.6.0",
-    "jotai-molecules": "^1.0.3",
     "jsonpointer": "^5.0.0",
     "optics-ts": "^2.2.0",
     "penpal": "^6.1.0",
