--- a/packages/react/package.json
+++ b/packages/react/package.json
@@ -2,7 +2,7 @@
   "name": "@raisins/react",
   "author": "ReferralSaaSquatch.com, Inc.",
   "description": "React package with tools for building a Raisins editor",
-  "version": "1.1.4-5",
+  "version": "1.1.4-6",
   "license": "MIT",
   "main": "dist/index.js",
   "module": "dist/react.esm.js",
@@ -34,7 +34,7 @@
     "storybook:build": "storybook build -c .storybook -o .out"
   },
   "peerDependencies": {
-    "react": "^16.13.0"
+    "react": "^16.13.0 || ^17.0.0"
   },
   "husky": {
     "hooks": {
