--- a/packages/react/package.json
+++ b/packages/react/package.json
@@ -2,7 +2,7 @@
   "name": "@raisins/react",
   "author": "ReferralSaaSquatch.com, Inc.",
   "description": "React package with tools for building a Raisins editor",
-  "version": "1.1.4-7",
+  "version": "1.1.4",
   "license": "MIT",
   "main": "dist/index.js",
   "module": "dist/react.esm.js",
@@ -63,6 +63,7 @@
     "@storybook/cli": "^7.0.21",
     "bunshi": "^2.0.2",
     "css-tree": "^1.1.3",
+    "fast-equals": "^5.0.1",
     "hotkeys-js": "^3.8.7",
     "jotai": "^1.6.0",
     "jsonpointer": "^5.0.0",
