--- a/packages/react/package.json
+++ b/packages/react/package.json
@@ -2,7 +2,7 @@
   "name": "@raisins/react",
   "author": "ReferralSaaSquatch.com, Inc.",
   "description": "React package with tools for building a Raisins editor",
-  "version": "1.1.3",
+  "version": "1.1.4",
   "license": "MIT",
   "main": "dist/index.js",
   "module": "dist/react.esm.js",
@@ -30,11 +30,11 @@
     "lint": "dts lint",
     "size": "size-limit",
     "analyze": "size-limit --why",
-    "storybook": "start-storybook -p 6007",
-    "build-storybook": "build-storybook"
+    "storybook": "storybook dev -p 6007 -c .storybook",
+    "storybook:build": "storybook build -c .storybook -o .out"
   },
   "peerDependencies": {
-    "react": "^16.13.0"
+    "react": "^16.13.0 || ^17.0.0"
   },
   "husky": {
     "hooks": {
@@ -60,10 +60,12 @@
   "dependencies": {
     "@raisins/core": "^1.1.0",
     "@raisins/schema": "^1.0.0",
+    "@storybook/cli": "^7.0.21",
+    "bunshi": "^2.0.2",
     "css-tree": "^1.1.3",
+    "fast-equals": "^5.0.1",
     "hotkeys-js": "^3.8.7",
     "jotai": "^1.6.0",
-    "jotai-molecules": "^1.0.3",
     "jsonpointer": "^5.0.0",
     "optics-ts": "^2.2.0",
     "penpal": "^6.1.0",
@@ -82,9 +84,9 @@
     "@babel/core": "^7.15.5",
     "@mdx-js/react": "^2.1.1",
     "@size-limit/preset-small-lib": "^5.0.4",
-    "@storybook/addons": "^6.4.22",
-    "@storybook/builder-vite": "^0.1.33",
-    "@storybook/react": "^6.4.22",
+    "@storybook/addons": "^7.0.21",
+    "@storybook/react": "^7.0.21",
+    "@storybook/react-vite": "^7.5.3",
     "@testing-library/react-hooks": "^7.0.2",
     "@types/css-tree": "^1.0.6",
     "@types/jest": "^29.1.0",
@@ -110,6 +112,7 @@
     "react-hooks-testing-library": "^0.6.0",
     "react-is": "^17.0.2",
     "size-limit": "^5.0.4",
+    "storybook": "^7.5.3",
     "ts-jest": "^29.1.0",
     "tslib": "^2.3.1",
     "typescript": "^4.4.3"
