--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -2,7 +2,7 @@
   "name": "@raisins/core",
   "author": "ReferralSaaSquatch.com, Inc.",
   "description": "Core functions for manipulating and validating HTML and raisin nodes",
-  "version": "1.1.1",
+  "version": "1.1.2",
   "license": "MIT",
   "main": "dist/index.js",
   "module": "dist/core.esm.js",
@@ -82,7 +82,7 @@
     "color2k": "^2.0.0",
     "css": "^3.0.0",
     "css-select": "^5.1.0",
-    "css-tree": "*",
+    "css-tree": "^1.1.3",
     "domelementtype": "^2.2.0",
     "entities": "^4.3.0",
     "husky": "^8.0.1",
