--- a/packages/react/package.json
+++ b/packages/react/package.json
@@ -31,7 +31,9 @@
     "size": "size-limit",
     "analyze": "size-limit --why",
     "storybook": "storybook dev -p 6007 -c .storybook",
-    "storybook:build": "storybook build -c .storybook -o .out"
+    "test-storybook": "test-storybook",
+    "storybook:build": "storybook build -c .storybook -o .out",
+    "test:storybook": "run-p storybook test-storybook"
   },
   "peerDependencies": {
     "react": "^16.13.0 || ^17.0.0"
@@ -60,8 +62,7 @@
   "dependencies": {
     "@raisins/core": "^1.1.2",
     "@raisins/schema": "^1.0.0",
-    "@storybook/cli": "^7.0.21",
-    "bunshi": "^2.0.2",
+    "@storybook/cli": "^7.6.17",
     "css-tree": "^1.1.3",
     "fast-equals": "^5.0.1",
     "hotkeys-js": "^3.8.7",
@@ -84,9 +85,12 @@
     "@babel/core": "^7.15.5",
     "@mdx-js/react": "^2.1.1",
     "@size-limit/preset-small-lib": "^5.0.4",
-    "@storybook/addons": "^7.0.21",
-    "@storybook/react": "^7.0.21",
-    "@storybook/react-vite": "^7.5.3",
+    "@storybook/addon-interactions": "^7.6.17",
+    "@storybook/addons": "^7.6.17",
+    "@storybook/react": "^7.6.17",
+    "@storybook/react-vite": "^7.6.17",
+    "@storybook/test-runner": "^0.16.0",
+    "@storybook/testing-library": "^0.2.2",
     "@testing-library/react-hooks": "^7.0.2",
     "@types/css-tree": "^1.0.6",
     "@types/jest": "^29.1.0",
@@ -101,18 +105,20 @@
     "@types/styled-components": "^5.1.14",
     "@types/throttle-debounce": "^5.0.0",
     "babel-loader": "^8.2.2",
+    "bunshi": "^2.1.3",
     "custom-elements-manifest": "^1.0.0",
     "cypress": "^12.12.0",
     "dts-cli": "^1.5.1",
     "husky": "^7.0.2",
     "jest-environment-jsdom": "^29.1.0",
     "local-cypress": "^1.2.5",
+    "npm-run-all2": "^6.1.2",
     "react": "*",
     "react-dom": "^16.14.0",
     "react-hooks-testing-library": "^0.6.0",
     "react-is": "^17.0.2",
     "size-limit": "^5.0.4",
-    "storybook": "^7.5.3",
+    "storybook": "^7.6.17",
     "ts-jest": "^29.1.0",
     "tslib": "^2.3.1",
     "typescript": "^4.4.3"
