--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   "license": "MIT",
   "author": "ReferralSaaSquatch.com, Inc.",
   "devDependencies": {
+    "@changesets/changelog-github": "^0.5.0",
     "lerna": "^4.0.0",
     "turbo": "^1.0.28"
   },
@@ -49,5 +50,8 @@
         "cache": false
       }
     }
+  },
+  "dependencies": {
+    "@changesets/cli": "^2.27.1"
   }
 }
