--- a/.github/workflows/build-test.yml
+++ b/.github/workflows/build-test.yml
@@ -14,7 +14,8 @@ jobs:
   build-test:
     name: Build and test
     runs-on: ubuntu-latest
-
+    container:
+      image: mcr.microsoft.com/playwright:v1.44.0-jammy
     steps:
       - name: Checkout
         uses: actions/checkout@v4
