--- a/packages/react/package.json
+++ b/packages/react/package.json
@@ -7,6 +7,7 @@
   "main": "dist/index.js",
   "module": "dist/react.esm.js",
   "typings": "dist/index.d.ts",
+  "type": "module",
   "repository": {
     "type": "git",
     "url": "https://github.com/saasquatch/raisins",
@@ -25,8 +26,8 @@
   "scripts": {
     "start": "dts watch",
     "build": "dts build",
-    "test": "dts test --passWithNoTests",
-    "test:watch": "dts test --passWithNoTests --watch",
+    "test": "vitest run",
+    "test:watch": "vitest",
     "lint": "dts lint",
     "size": "size-limit",
     "analyze": "size-limit --why",
@@ -61,7 +62,7 @@
     "@raisins/core": "^1.1.2",
     "@raisins/schema": "^1.0.0",
     "@storybook/cli": "^7.0.21",
-    "bunshi": "^2.0.2",
+    "bunshi": "^2.1.4",
     "css-tree": "^1.1.3",
     "fast-equals": "^5.0.1",
     "hotkeys-js": "^3.8.7",
@@ -115,7 +116,8 @@
     "storybook": "^7.5.3",
     "ts-jest": "^29.1.0",
     "tslib": "^2.3.1",
-    "typescript": "^4.4.3"
+    "typescript": "^4.4.3",
+    "vitest": "^1.6.0"
   },
   "bugs": {
     "url": "https://github.com/saasquatch/raisins/issues"
