--- a/packages/react/package.json
+++ b/packages/react/package.json
@@ -28,7 +28,7 @@
     "build": "dts build",
     "test": "vitest run",
     "test:watch": "vitest",
-    "lint": "dts lint",
+    "lint": "eslint src",
     "size": "size-limit",
     "analyze": "size-limit --why",
     "storybook": "storybook dev -p 6007 -c .storybook",
@@ -36,11 +36,6 @@
   },
   "peerDependencies": {
     "react": "^16.13.0 || ^17.0.0"
-  },
-  "husky": {
-    "hooks": {
-      "pre-commit": "dts lint"
-    }
   },
   "prettier": {
     "printWidth": 80,
@@ -83,6 +78,7 @@
   },
   "devDependencies": {
     "@babel/core": "^7.15.5",
+    "@eslint/js": "^8.57.0",
     "@mdx-js/react": "^2.1.1",
     "@size-limit/preset-small-lib": "^5.0.4",
     "@storybook/addons": "^7.0.21",
@@ -105,6 +101,9 @@
     "custom-elements-manifest": "^1.0.0",
     "cypress": "^12.12.0",
     "dts-cli": "^1.5.1",
+    "eslint": "^8.57.0",
+    "eslint-plugin-react": "^7.34.1",
+    "globals": "^15.2.0",
     "husky": "^7.0.2",
     "jest-environment-jsdom": "^29.1.0",
     "local-cypress": "^1.2.5",
@@ -117,6 +116,7 @@
     "ts-jest": "^29.1.0",
     "tslib": "^2.3.1",
     "typescript": "^4.4.3",
+    "typescript-eslint": "^7.8.0",
     "vitest": "^1.6.0"
   },
   "bugs": {
