--- a/package.json
+++ b/package.json
@@ -15,9 +15,8 @@
   "author": "ReferralSaaSquatch.com, Inc.",
   "devDependencies": {
     "@changesets/changelog-github": "^0.5.0",
+    "@changesets/cli": "^2.27.1",
     "turbo": "^1.13.3"
   },
-  "dependencies": {
-    "@changesets/cli": "^2.27.1"
-  }
+  "dependencies": {}
 }
