--- a/packages/react/package.json
+++ b/packages/react/package.json
@@ -79,6 +79,7 @@
     "@babel/core": "^7.15.5",
     "@eslint/js": "^8.57.0",
     "@mdx-js/react": "^2.1.1",
+    "@playwright/test": "^1.44.0",
     "@size-limit/preset-small-lib": "^5.0.4",
     "@storybook/addons": "^7.0.21",
     "@storybook/cli": "^7.0.21",
@@ -87,6 +88,7 @@
     "@testing-library/react-hooks": "^7.0.2",
     "@types/css-tree": "^1.0.6",
     "@types/jest": "^29.1.0",
+    "@types/node": "^16.18.97",
     "@types/prosemirror-commands": "^1.0.4",
     "@types/prosemirror-keymap": "^1.0.4",
     "@types/prosemirror-schema-basic": "^1.0.2",
@@ -99,13 +101,12 @@
     "@types/throttle-debounce": "^5.0.0",
     "babel-loader": "^8.2.2",
     "custom-elements-manifest": "^1.0.0",
-    "cypress": "^12.12.0",
     "dts-cli": "^1.5.1",
     "eslint": "^8.57.0",
     "eslint-plugin-react": "^7.34.1",
     "globals": "^15.2.0",
     "jest-environment-jsdom": "^29.1.0",
-    "local-cypress": "^1.2.5",
+    "playwright": "^1.44.0",
     "react": "*",
     "react-dom": "^16.14.0",
     "react-hooks-testing-library": "^0.6.0",
